--- a/styles/sass/_mixins.sass
+++ b/styles/sass/_mixins.sass
@@ -32,6 +32,10 @@
     @media (max-width: 600px)
         @content
 
+@mixin responsivo-500
+    @media (max-width: 500px)
+        @content
+
 @mixin responsivo-350
     @media (max-width: 350px)
         @content
