--- a/styles/sass/Habilidades.module.sass
+++ b/styles/sass/Habilidades.module.sass
@@ -102,6 +102,7 @@
                 p
                     text-align: center
                     height: 30px
+                    font-size: 1rem
             .nivel
                 display: flex
                 flex-direction: column
