--- a/styles/css/Habilidades.module.css
+++ b/styles/css/Habilidades.module.css
@@ -43,6 +43,9 @@
   padding: 25px;
   box-shadow: 15px 15px 10px black;
 }
+.habilidades .descricao .descricaoText {
+  font-size: 1rem;
+}
 @media (max-width: 1300px) {
   .habilidades .descricao {
     width: 70%;
