--- a/styles/sass/Habilidades.module.sass
+++ b/styles/sass/Habilidades.module.sass
@@ -34,6 +34,8 @@
         margin-bottom: 50px
         padding: 25px
         box-shadow: 15px 15px 10px black
+        .descricaoText
+            font-size: 1rem
         @include mixins.responsivo-1300
             width: 70%
         .verde, .vermelho
