--- a/styles/sass/Habilidades.module.sass
+++ b/styles/sass/Habilidades.module.sass
@@ -35,7 +35,7 @@
         padding: 25px
         box-shadow: 15px 15px 10px black
         .descricaoText
-            font-size: 1rem
+            font-size: 1rem !important
         @include mixins.responsivo-1300
             width: 70%
         .verde, .vermelho
