--- a/styles/sass/Habilidades.module.sass
+++ b/styles/sass/Habilidades.module.sass
@@ -267,6 +267,10 @@
                 margin-top: 10px
                 span
                     font-weight: 600
+            p
+                font-size: 1rem
+            .subtitle
+                font-size: 1.5rem
         .infos
             width: 80%
             transform: translate(0)
