Resolvendo erros nas fontes/5.

--- a/styles/sass/Habilidades.module.sass
+++ b/styles/sass/Habilidades.module.sass
@@ -268,9 +268,9 @@
                 span
                     font-weight: 600
             p
-                font-size: 1rem
+                font-size: 1rem !important
             .subtitle
-                font-size: 1.5rem
+                font-size: 1.5rem !important
         .infos
             width: 80%
             transform: translate(0)
