--- a/styles/css/Habilidades.module.css
+++ b/styles/css/Habilidades.module.css
@@ -368,10 +368,10 @@
   font-weight: 600;
 }
 .habilidades .geral .descricao p {
-  font-size: 1rem;
+  font-size: 1rem !important;
 }
 .habilidades .geral .descricao .subtitle {
-  font-size: 1.5rem;
+  font-size: 1.5rem !important;
 }
 .habilidades .geral .infos {
   width: 80%;
