--- a/styles/sass/Habilidades.module.sass
+++ b/styles/sass/Habilidades.module.sass
@@ -267,10 +267,8 @@
                 margin-top: 10px
                 span
                     font-weight: 600
-            p
+            .descricaoText, .tipo, .verde, .vermelho, .legenda
                 font-size: 1rem !important
-            .subtitle
-                font-size: 1.5rem !important
         .infos
             width: 80%
             transform: translate(0)
