--- a/styles/sass/_mixins.sass
+++ b/styles/sass/_mixins.sass
@@ -16,6 +16,10 @@
     @media (max-width: 1100px)
         @content
 
+@mixin responsivo-1000
+    @media (max-width: 1000px)
+        @content
+
 @mixin responsivo-900
     @media (max-width: 900px)
         @content
