--- a/styles/css/ContateMe.module.css
+++ b/styles/css/ContateMe.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
 }
 .contato h2 {
   padding-bottom: 30px;
@@ -162,7 +162,7 @@
   z-index: 9999;
 }
 .mainPoupUp .poupUpEmail {
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(200, 200, 200);
   width: 90%;
   height: 250px;
   max-width: 550px;
