--- a/styles/css/Footer.module.css
+++ b/styles/css/Footer.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   text-align: center;
   padding: 0 20px 0 20px;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
 }
 
 /*# sourceMappingURL=Footer.module.css.map */
