--- a/styles/sass/Habilidades.module.sass
+++ b/styles/sass/Habilidades.module.sass
@@ -5,8 +5,10 @@
     padding-top: 100px
     @include mixins.align-center(row)
     justify-content: space-between
+    @include mixins.responsivo-1000
+        background-color: white
     .tecnologias, .boosters
-        background-color: red
+        background-color: variables.$containers-color
         border-radius: 10px
         width: 100%
         min-height: 600px
@@ -19,7 +21,7 @@
             padding-bottom: 50px
             margin-top: 20px
     .tecnologias
-        margin-left: 100px
+        margin-left: 50px
         @include mixins.responsivo-1500
             margin-left: 20px
         ul
@@ -30,7 +32,7 @@
         flex-direction: column
         width: 80%
         min-height: 200px
-        background-color: blue
+        background-color: variables.$cards-color
         margin-bottom: 50px
         padding: 25px
         box-shadow: 15px 15px 10px black
@@ -55,7 +57,7 @@
             font-weight: 600
             margin-bottom: 15px
     .boosters
-        margin-right: 100px
+        margin-right: 50px
         @include mixins.responsivo-1500
             margin-right: 20px
         .boostersContainer
@@ -67,17 +69,10 @@
         display: flex
         flex-direction: column
         padding: 25px
-        width: calc( 120% -  50px)
-        background-color: blue
-        transform: translate(calc( -10% - 25px ))
+        background-color: variables.$cards-color
         box-shadow: 15px 15px 10px black
         margin-bottom: 50px
-        @include mixins.responsivo-1300
-            width: calc( 140% -  50px)
-            transform: translate(calc( -15% - 25px ))
-        @include mixins.responsivo-1100
-            width: calc( 160% -  50px)
-            transform: translate(calc( -20% - 25px ))
+        width: 80%
         .personagem
             display: flex
             flex-direction: row
@@ -97,7 +92,7 @@
             display: flex
             flex-direction: row
             justify-content: space-between
-            .habilidades
+            .habilidadesText
                 display: flex
                 flex-direction: column
                 padding: 0
@@ -112,12 +107,13 @@
                 span
                     height: 20px
                     width: 100%
-                    border: 1px solid red
+                    border: 2px solid variables.$load-color
+                    background-color: rgba(0, 0, 0, 0.5)
                     margin-bottom: 10px
-                    border-radius: 10px
+                    border-radius: 12px
                     box-shadow: 7px 7px 5px black
                     div
-                        background-color: red
+                        background-color: variables.$load-color
                         height: 20px
                         border-radius: 10px
                     .ui
@@ -140,7 +136,7 @@
         li
             height: 80px
             width: 80px
-            background-color: white
+            background-color: variables.$fundoIcones-color
             display: flex
             justify-content: center
             align-items: center
@@ -203,7 +199,6 @@
                 color: gray
     .geral
         width: 100%
-        background-color: red
         display: flex
         justify-content: center
         align-items: center
