--- a/styles/sass/Home.module.sass
+++ b/styles/sass/Home.module.sass
@@ -5,6 +5,7 @@
     padding-top: 100px
     @include mixins.align-center(row)
     background-size: 600px
+    background-color: variables.$home-color
     @include mixins.responsivo-900
         @include mixins.align-center(column)
     .foto
