--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -1,10 +1,9 @@
 @use 'variables'
 @use 'mixins'
-
     
 .logo
     @include mixins.align-center(column)
-    padding: 10px 0 10px 0
+    padding: 10px 0 10px 25px
     p
         font-family: variables.$font
         font-size: 1.4rem
@@ -18,82 +17,89 @@
         span
             color: variables.$gray-color
 
-.navbar
-    @include mixins.align-center(row)
-    border-bottom: 2px solid black
-    background-color: variables.$nav-color
-    position: fixed
+.back
+    display: flex
+    justify-content: center
     width: 100%
-    z-index: 10
-    button
-        border: 0px solid transparent
-        background-color: transparent
-        cursor: pointer
-    svg
-        height: 30px
-        width: 30px
-        @include mixins.responsivo-350
-            width: 15px
-            height: 15px
-    ul
+    padding-bottom: 20px
+    .navbar
         @include mixins.align-center(row)
-        list-style: none
-        padding-left: 50px
-        @include mixins.responsivo-600
-            padding-left: 0
-        li
-            padding: 10px 25px 10px 25px
-            @include mixins.responsivo-800
-                padding: 10px 15px 10px 15px
-            svg
-                height: 30px
-                width: 30px
+        justify-content: space-between
+        border-radius: 20px
+        background-color: variables.$nav-color
+        position: fixed
+        width: 98%
+        z-index: 10
+        margin-top: 10px
+        button
+            border: 0px solid transparent
+            background-color: transparent
+            cursor: pointer
+        svg
+            height: 30px
+            width: 30px
+            @include mixins.responsivo-350
+                width: 15px
+                height: 15px
+        ul
+            @include mixins.align-center(row)
+            list-style: none
+            padding-left: 50px
+            @include mixins.responsivo-600
+                padding-left: 0
+            li
+                padding: 10px 25px 10px 25px
                 @include mixins.responsivo-800
-                    height: 20px
-                    width: 20px
-            a
-                text-decoration: none
-                color: black
-            .ativo
-                color: variables.$blue-color
+                    padding: 10px 15px 10px 15px
                 svg
-                    animation: rotate 1s 1
-            .inativo
-                &:hover
-                    color: rgb(100, 100, 100)
-        .lista_inativo:hover
-            transform: translateY(-3px)
-    .containerMenu
-        position: relative
-        display: inline-block
-        .menuButton
-            margin-left: 20px
-            margin-right: 20px
-            svg
-                @include mixins.responsivo-600
-                    height: 20px
-                    width: 20px
-            .menuClose
-                transition: transform 0.5s ease, color 0.5s ease
-            .menuOpen
-                transform: rotate(90deg)
-                color: variables.$blue-color
-                transition: transform 0.5s ease, color 0.5s ease
-        .menu
-            background-color: variables.$nav-color
-            border-radius: 15px
-            border: 2px solid black
-            animation: fade-in 0.5s ease-in-out
-            z-index: 10
-            position: absolute
-            left: 0
-            top: 30px
-            ul
-                @include mixins.align-center(column)
-                li
-                    a
-                        @include mixins.responsivo-600
-                            font-size: 0.7rem
+                    height: 30px
+                    width: 30px
+                    @include mixins.responsivo-800
+                        height: 20px
+                        width: 20px
+                a
+                    text-decoration: none
+                    color: black
+                .ativo
+                    color: variables.$blue-color
+                    svg
+                        animation: rotate 1s 1
+                .inativo
+                    &:hover
+                        color: rgb(100, 100, 100)
+            .lista_inativo:hover
+                transform: translateY(-3px)
+        .containerMenu
+            position: relative
+            display: inline-block
+            .menuButton
+                margin-left: 20px
+                margin-right: 20px
+                svg
+                    @include mixins.responsivo-600
+                        height: 20px
+                        width: 20px
+                .menuClose
+                    transition: transform 0.5s ease, color 0.5s ease
+                .menuOpen
+                    transform: rotate(90deg)
+                    color: variables.$blue-color
+                    transition: transform 0.5s ease, color 0.5s ease
+            .menu
+                background-color: variables.$nav-color
+                border-radius: 15px
+                border: 2px solid black
+                animation: fade-in 0.5s ease-in-out
+                z-index: 10
+                position: absolute
+                left: 0
+                top: 30px
+                ul
+                    @include mixins.align-center(column)
+                    li
+                        a
+                            @include mixins.responsivo-600
+                                font-size: 0.7rem
 
 @keyframes rotate
     0%
