--- a/styles/sass/_variables.sass
+++ b/styles/sass/_variables.sass
@@ -4,11 +4,17 @@ $font: 'Edu TAS Beginner', cursive
 $blue-color: rgb(0, 100, 200)
 $green-color: rgb(0, 170, 0)
 $gray-color: rgb(100, 100, 100)
-$nav-color: rgb(240, 240, 240)
-$contato-color: rgb(255, 255, 255)
+$nav-color: rgb(200, 200, 200)
+$contato-color: white
 $errorMessage-color: rgb(255, 255, 255)
 $red-color: rgb(255, 0, 0)
 $pink-color: rgb(224, 0, 168)
 $ui: 80%
 $responsividade: 85%
 $frameworks: 70%
+$containers-color: blue
+$cards-color: rgb(184, 19, 101)
+$load-color: rgb(245, 143, 41)
+$fundoIcones-color: white
+$home-color: white
+$habilidades-color: white
