--- a/styles/sass/Navbar.module.sass
+++ b/styles/sass/Navbar.module.sass
@@ -86,7 +86,7 @@
                     color: variables.$blue-color
                     transition: transform 0.5s ease, color 0.5s ease
             .menu
-                background-color: variables.$nav-color
+                background-color: rgb(240, 240, 240)
                 border-radius: 15px
                 border: 2px solid black
                 animation: fade-in 0.5s ease-in-out
@@ -125,7 +125,7 @@
     .settingsMenu
         @include mixins.align-center(column)
         position: absolute
-        background-color: variables.$nav-color
+        background-color: rgb(240, 240, 240)
         border-radius: 15px
         padding: 20px 20px 0 20px
         border: 2px solid black
